# function-plotter

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  main.cpp  setup_dependencies.bat  setup_dependencies.sh
src/: Animation.h
src/core/: App.cpp  App.h  Config.cpp  Config.h
src/render/: RendererGL.cpp  RendererGL.h  Scene.cpp  Scene.h
src/ui/: GuiManager.cpp  GuiManager.h
